<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        layout="@layout/toolbar_layout_button"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        />
    <TextView
        android:id="@+id/tv_lat"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/tv_lng"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/tap_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/tap_instructions" />

    <TextView
        android:id="@+id/camera_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_the_camera" />
    <TextView
        android:id="@+id/touch_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/touch_the_map" />
    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>