<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:background="@color/gray1"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginTop="@dimen/height_50"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:orientation="horizontal"
        android:background="@drawable/bg_rectangle_while"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/newpassword"
            android:textSize="@dimen/text_size_20"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/height_40"/>

        <EditText
            android:id="@+id/et_newpassword"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:hint="@string/inputnewpassword"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:password="true"
            android:layout_height="@dimen/height_40"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:orientation="horizontal"
        android:background="@drawable/bg_rectangle_while"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/Confirmpassword"
            android:textSize="@dimen/text_size_20"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="@dimen/height_40"/>

        <EditText
            android:id="@+id/et_surepassword"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:hint="@string/pleaseconfirmpassword"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:password="true"
            android:layout_height="@dimen/height_40"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_10"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/pwd_trim"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <Button
        android:id="@+id/btn_makesure"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_left"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:textSize="@dimen/text_size_20"
        android:textColor="@android:color/white"
        android:text="@string/makesure1"
        android:background="@drawable/btn_send_selector"/>


</LinearLayout>