<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:background="@mipmap/bg"
	android:layout_height="match_parent">

	<include
		layout="@layout/toolbar_layout"
		android:layout_width="match_parent"

		android:layout_height="40dip"
		/>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="wrap_content">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_gravity="center"
		android:gravity="center"
		android:layout_marginTop="40dip"
		android:orientation="vertical"
		android:layout_height="wrap_content">

		<ImageView
			android:layout_width="200dip"
			android:layout_gravity="center"


			android:src="@mipmap/logo_3"
			android:layout_height="200dip" />

	</LinearLayout>
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent" >

			<com.example.administrator.irrigationworks.Ui.View.BackgroundView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:paddingLeft="10dp" />
		</FrameLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:orientation="vertical"
		android:padding="15dip"
		android:layout_margin="15dip"

		android:layout_height="wrap_content">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<app.dinus.com.loadingdrawable.LoadingView
				android:id="@+id/day_night_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:background="@drawable/background_login"
				app:loading_renderer="DayNightLoadingRenderer" />
			<RelativeLayout
				android:id="@+id/login_div"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="15dip"
				android:layout_margin="15dip"
				>
				<!-- 账号 -->
				<TextView
					android:id="@+id/login_user_input"
					android:layout_width="wrap_content"
					android:visibility="gone"
					android:layout_height="wrap_content"
					android:layout_alignParentTop="true"
					android:layout_marginTop="5dp"
					android:text="@string/check_name"
					/>
				<EditText
					android:id="@+id/username_edit"
					android:layout_width="fill_parent"
					android:textColorHint="@color/white"
					android:layout_height="wrap_content"
					android:hint="请输入手机号码"
					android:layout_below="@id/login_user_input"
					android:textColor="@color/ziti"
					android:singleLine="true"
					android:inputType="text"/>
				<!-- 密码 text -->
				<TextView
					android:id="@+id/login_password_input"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:layout_below="@id/username_edit"
					android:layout_marginTop="3dp"
					android:text="@string/login_label_password"
					/>
				<EditText
					android:id="@+id/password_edit"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="请输入密码"
					android:layout_marginTop="10dip"
					android:textColorHint="@color/white"
					android:textColor="@color/ziti"
					android:layout_below="@id/login_password_input"
					android:password="true"
					android:singleLine="true"
					android:inputType="textPassword" />
				<!-- 登录button -->

			</RelativeLayout>
		</RelativeLayout>


		<Button
			android:id="@+id/login"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="30dip"
			android:layout_marginRight="30dip"
			android:background="@drawable/login_button"
			android:padding="10dp"
			android:textColor="@color/ziti"
			android:text="登录"
			 />
		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_marginTop="10dip"
			android:layout_height="wrap_content" >
			<TextView  android:id="@+id/register_link"
				android:text="@string/login_password"
				android:visibility="gone"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="15dp"

				android:textColor="@color/white"
				android:textColorLink="#FF0066CC" />

		</RelativeLayout>
	</LinearLayout>
	</RelativeLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>